--- a/style.css
+++ b/style.css
@@ -1,8 +1,32 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
+}
+
+body {
+  min-height: 100vh;
+  background-color: #f0f0f0;
+  color: #262626;
+}
+
+.header {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.avatar img {
+  border-radius: 50%;
+  width: 96px;
+  height: 96px;
+  margin-bottom: 12px;
+}
+
+.username {
+  text-decoration: underline;
 }
